--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <div class="home-content wrapper">
       <h2 class="page-title">Don't think,...feel.</h2>
-      <p>個性的なキャラクターと一緒に宇宙の旅へ</p>
-      <a class="button" href="menu.html">作品へ</a>
+      <p>はじめまして</p>
+      <a class="button" href="menu.html">詳細へ</a>
     </div><!-- /.home-content -->
   </div><!-- /#home -->
   </body>
