--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div id="home" class="big-bg">
    <header class="page-header wrapper">
-     <h1><a href="index.html"><img class="logo" src="images/music1.svg" alt="STARWARSの楽しみ方　ホーム"></a></h1>
+     <h1><a href="index.html"><img class="logo" src="music1.svg" alt="ポートフォリオ　ホーム"></a></h1>
      <nav>
        <ul class="main-nav">
          <li><a href="news-s.html">News</a></li>
