--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="ja">
  <head>
@@ -15,13 +16,13 @@
    <!-- css -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
     <div id="home" class="big-bg">
    <header class="page-header wrapper">
-     <h1><a href="index.html"><img class="logo" src="images/music1.svg" alt="STARWARSの楽しみ方　ホーム"></a></h1>
+     <h1><a href="index.html"><img class="logo" src="music1.svg" alt="ポートフォリオ　ホーム"></a></h1>
      <nav>
        <ul class="main-nav">
          <li><a href="news-s.html">News</a></li>
@@ -33,8 +34,8 @@
 
     <div class="home-content wrapper">
       <h2 class="page-title">Don't think,...feel.</h2>
-      <p>個性的なキャラクターと一緒に宇宙の旅へ</p>
-      <a class="button" href="menu.html">作品へ</a>
+      <p>はじめまして</p>
+      <a class="button" href="menu.html">詳細へ</a>
     </div><!-- /.home-content -->
   </div><!-- /#home -->
   </body>
