--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>ポートフォリオ - 詳細</title>
-   <meta name="description" content="">自己紹介
+   <meta name="description" content="自己紹介">
    <link rel="icon" type="image/png" href="favicon.png">
    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
