--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
      <h1><a href="index.html"><img class="logo" src="music1.svg" alt="ポートフォリオ　ホーム"></a></h1>
      <nav>
        <ul class="main-nav">
-         <li><a href="news.html">News</a></li>
+         <li><a href="news-s.html">News</a></li>
          <li><a href="menu.html"></a>自己紹介</li>
          <li><a href="contact.html">Contact</a><li>
        </ul>
